--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/jass.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
-
+{{!--
 
 <body>
     <div class="flex-column justify-space-around">
@@ -40,6 +40,6 @@
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
     {{/if}}
-</body>
+</body> --}}
 
 </html>
