--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,44 +2,62 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Blogger!</title>
-    <link rel="stylesheet" href="/css/jass.css">
-    <link rel="stylesheet" href="/css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TechBlogger</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Raleway:wght@400;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="/css/style.css">
 </head>
-{{!--
 
 <body>
-    <div class="flex-column justify-space-around">
-        <header class="display-flex justify-space-between align-center p-2">
-            <h1>
-                <span role="img" aria-label="money">💸</span>
-                <a href="/">Fund My Project!</a>
-            </h1>
-            <nav>
-                <!-- Conditionally render login or logout links -->
-                {{#if logged_in}}
-                <a href="/profile">profile</a> |
-                <button class="no-button" id="logout">logout</button>
-                {{else}}
-                <a href="/login">login</a>
-                {{/if}}
-            </nav>
-        </header>
-        <main class="container container-fluid mt-5">
-            <!-- Render the sub layout -->
-            {{{ body }}}
-        </main>
-        <footer>
-
-        </footer>
+  <div class="jumbotron jumbotron-fluid container-fluid">
+    <div class="row">
+      <div class="col-12 col-lg-6 d-flex justify-content-center my-1 align-self-center">
+        <h1 class="px-5 mx-5 text-center">TechBlogger</h1>
+      </div>
+      <div class="col-12 col-lg-6 px-5 my-1 align-self-center">
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <button class="btn nav-btn">
+              <a class="nav-link text-dark" href="/"><span class="btn-text">Home</span></a>
+            </button>
+          </li>
+          {{#if isLoggedIn}}
+          <li class="nav-item">
+            <button class="btn nav-btn" id="logout-btn">
+              <a class="nav-link text-dark" href="#"><span class="btn-text">Logout</span></a>
+            </button>
+          </li>
+          {{else}}
+          <li class="nav-item">
+            <button class="btn nav-btn" id="logout-btn">
+              <a class="nav-link text-dark" href="/login"><span class="btn-text">Login</span></a>
+            </button>
+          </li>
+          <li class="nav-item">
+            <button class="btn nav-btn" id="logout-btn">
+              <a class="nav-link text-dark" href="/signup"><span class="btn-text">Signup</span></a>
+            </button>
+          </li>
+          {{/if}}
+        </ul>
+      </div>
     </div>
-
-    <!-- Render script for logged in users only -->
-    {{#if logged_in}}
-    <script src="/js/logout.js"></script>
-    {{/if}}
-</body> --}}
+  </div>
+  <div class="container-fluid">
+    {{{body}}}
+  </div>
+  {{#if isLoggedIn}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
+</body>
 
 </html>
